--- a/proffesional_python/numpy/data_types.ipynb
+++ b/proffesional_python/numpy/data_types.ipynb
@@ -67,6 +67,8 @@
    "source": [
     "# Some data types\n",
     "\n",
+    "¡¡¡Remember!!! One data type per array\n",
+    "\n",
     "• .dtype: Para poder saber cuál es el tipo de dato está usando el array\n",
     "• .astype: Para poder cambiar el tipo de dato qué está usando el array"
    ]
