--- a/proffesional_python/numpy/numpy_array.ipynb
+++ b/proffesional_python/numpy/numpy_array.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "       [27, 28, 29]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,23 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2 3]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,13 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
       "[2, 3, 4, 5, 6]\n"
      ]
     },
@@ -147,20 +141,21 @@
        "[2, 4, 6]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#slicing, array[from:until:intervals]\n",
+    "print(x)\n",
     "print(x[2:7])\n",
     "x[2:7:2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +180,7 @@
        "array([13, 16, 19, 22, 25, 28])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,17 +198,17 @@
     {
      "data": {
       "text/plain": [
-       "array([[[10,  5],\n",
-       "        [ 4,  4],\n",
-       "        [ 0, 10]],\n",
+       "array([[[ 8,  3],\n",
+       "        [ 2,  0],\n",
+       "        [ 7,  3]],\n",
        "\n",
-       "       [[ 8,  2],\n",
-       "        [ 3,  5],\n",
-       "        [ 2,  4]],\n",
+       "       [[ 1,  5],\n",
+       "        [ 2, 10],\n",
+       "        [ 9,  7]],\n",
        "\n",
-       "       [[ 9,  2],\n",
-       "        [ 4,  8],\n",
-       "        [ 2,  7]]])"
+       "       [[ 9,  3],\n",
+       "        [ 3,  7],\n",
+       "        [10,  6]]])"
       ]
      },
      "execution_count": 9,
@@ -231,16 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "3"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +247,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -266,12 +261,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "c9374a5d5ab4748b8d60681d891a00ebd42f7a697df929eea3c0773aed233ddc"
    }
   }
  },
