--- a/proffesional_python/numpy/main_functions.ipynb
+++ b/proffesional_python/numpy/main_functions.ipynb
@@ -344,7 +344,8 @@
     }
    ],
    "source": [
-    "arr.sort()\n",
+    "arr.sort() # Modifyng the object\n",
+    "np.sort(arr) #Creating a copy of a the sorted object, BEST OPTION\n",
     "arr"
    ]
   },
@@ -618,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
