--- a/proffesional_python/pandas/files.ipynb
+++ b/proffesional_python/pandas/files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "[550 rows x 7 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "[550 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
        "[1940 rows x 8 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "Length: 1940, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,12 +670,389 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# OTHERS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#HTML\n",
+    "mr = pd.read_html('https://en.wikipedia.org/wiki/List_of_cities_by_homicide_rate')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 50 entries, 0 to 49\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                          Non-Null Count  Dtype  \n",
+      "---  ------                          --------------  -----  \n",
+      " 0   Rank                            50 non-null     int64  \n",
+      " 1   City                            50 non-null     object \n",
+      " 2   Country                         50 non-null     object \n",
+      " 3   Homicides (2019)                50 non-null     int64  \n",
+      " 4   Population (2019)               50 non-null     int64  \n",
+      " 5   Homicides per 100,000 per year  50 non-null     float64\n",
+      "dtypes: float64(1), int64(3), object(2)\n",
+      "memory usage: 2.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "mr[0].info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Homicides (2019)</th>\n",
+       "      <th>Population (2019)</th>\n",
+       "      <th>Homicides per 100,000 per year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Tijuana</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>2367</td>\n",
+       "      <td>1763197</td>\n",
+       "      <td>134.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Juárez</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>1522</td>\n",
+       "      <td>1455923</td>\n",
+       "      <td>104.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Uruapan</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>301</td>\n",
+       "      <td>351823</td>\n",
+       "      <td>85.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Irapuato</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>723</td>\n",
+       "      <td>895515</td>\n",
+       "      <td>80.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Obregón</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>281</td>\n",
+       "      <td>348154</td>\n",
+       "      <td>80.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Caracas</td>\n",
+       "      <td>Venezuela</td>\n",
+       "      <td>2134</td>\n",
+       "      <td>2858933</td>\n",
+       "      <td>74.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Acapulco</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>600</td>\n",
+       "      <td>837914</td>\n",
+       "      <td>71.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Cape Town</td>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>3065</td>\n",
+       "      <td>4488545</td>\n",
+       "      <td>68.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>St. Louis</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>194</td>\n",
+       "      <td>300576</td>\n",
+       "      <td>64.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Vitória da Conquista</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>205</td>\n",
+       "      <td>341597</td>\n",
+       "      <td>60.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Baltimore</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>348</td>\n",
+       "      <td>593490</td>\n",
+       "      <td>58.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Ciudad Guayana</td>\n",
+       "      <td>Venezuela</td>\n",
+       "      <td>462</td>\n",
+       "      <td>799255</td>\n",
+       "      <td>57.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Kingston</td>\n",
+       "      <td>Jamaica</td>\n",
+       "      <td>680</td>\n",
+       "      <td>1180771</td>\n",
+       "      <td>57.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Feira de Santana</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>349</td>\n",
+       "      <td>614872</td>\n",
+       "      <td>56.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>San Pedro Sula</td>\n",
+       "      <td>Honduras</td>\n",
+       "      <td>436</td>\n",
+       "      <td>789645</td>\n",
+       "      <td>55.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
+       "      <td>San Juan</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>172</td>\n",
+       "      <td>318441</td>\n",
+       "      <td>54.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Ensenada</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>275</td>\n",
+       "      <td>527584</td>\n",
+       "      <td>52.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Ciudad Bolívar</td>\n",
+       "      <td>Venezuela</td>\n",
+       "      <td>189</td>\n",
+       "      <td>370627</td>\n",
+       "      <td>51.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Cuernavaca</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>470</td>\n",
+       "      <td>923274</td>\n",
+       "      <td>50.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Celaya</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>262</td>\n",
+       "      <td>526166</td>\n",
+       "      <td>49.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>21</td>\n",
+       "      <td>Culiacan</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>472</td>\n",
+       "      <td>955340</td>\n",
+       "      <td>49.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Natal</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>645</td>\n",
+       "      <td>1334817</td>\n",
+       "      <td>48.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Salvador, Bahia</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>1657</td>\n",
+       "      <td>3490792</td>\n",
+       "      <td>47.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Nelson Mandela Bay (Port Elizabeth)</td>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>553</td>\n",
+       "      <td>1207485</td>\n",
+       "      <td>45.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Cancún</td>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>376</td>\n",
+       "      <td>825647</td>\n",
+       "      <td>45.54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Rank                                 City        Country  \\\n",
+       "0      1                              Tijuana         Mexico   \n",
+       "1      2                               Juárez         Mexico   \n",
+       "2      3                              Uruapan         Mexico   \n",
+       "3      4                             Irapuato         Mexico   \n",
+       "4      5                              Obregón         Mexico   \n",
+       "5      6                              Caracas      Venezuela   \n",
+       "6      7                             Acapulco         Mexico   \n",
+       "7      8                            Cape Town   South Africa   \n",
+       "8      9                            St. Louis  United States   \n",
+       "9     10                 Vitória da Conquista         Brazil   \n",
+       "10    11                            Baltimore  United States   \n",
+       "11    12                       Ciudad Guayana      Venezuela   \n",
+       "12    13                             Kingston        Jamaica   \n",
+       "13    14                     Feira de Santana         Brazil   \n",
+       "14    15                       San Pedro Sula       Honduras   \n",
+       "15    16                             San Juan  United States   \n",
+       "16    17                             Ensenada         Mexico   \n",
+       "17    18                       Ciudad Bolívar      Venezuela   \n",
+       "18    19                           Cuernavaca         Mexico   \n",
+       "19    20                               Celaya         Mexico   \n",
+       "20    21                             Culiacan         Mexico   \n",
+       "21    22                                Natal         Brazil   \n",
+       "22    23                      Salvador, Bahia         Brazil   \n",
+       "23    24  Nelson Mandela Bay (Port Elizabeth)   South Africa   \n",
+       "24    25                               Cancún         Mexico   \n",
+       "\n",
+       "    Homicides (2019)  Population (2019)  Homicides per 100,000 per year  \n",
+       "0               2367            1763197                          134.24  \n",
+       "1               1522            1455923                          104.54  \n",
+       "2                301             351823                           85.54  \n",
+       "3                723             895515                           80.74  \n",
+       "4                281             348154                           80.72  \n",
+       "5               2134            2858933                           74.65  \n",
+       "6                600             837914                           71.61  \n",
+       "7               3065            4488545                           68.28  \n",
+       "8                194             300576                           64.54  \n",
+       "9                205             341597                           60.01  \n",
+       "10               348             593490                           58.64  \n",
+       "11               462             799255                           57.80  \n",
+       "12               680            1180771                           57.59  \n",
+       "13               349             614872                           56.76  \n",
+       "14               436             789645                           55.21  \n",
+       "15               172             318441                           54.01  \n",
+       "16               275             527584                           52.12  \n",
+       "17               189             370627                           51.01  \n",
+       "18               470             923274                           50.91  \n",
+       "19               262             526166                           49.87  \n",
+       "20               472             955340                           49.41  \n",
+       "21               645            1334817                           48.32  \n",
+       "22              1657            3490792                           47.47  \n",
+       "23               553            1207485                           45.80  \n",
+       "24               376             825647                           45.54  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mr[0][0:25]\n",
+    "#mr[Select a table][Slicing]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +1070,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +1093,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +1113,7 @@
        "RangeIndex(start=0, stop=1000, step=1)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1389,7 @@
        "[100 rows x 12 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
