--- a/proffesional_python/pandas/series_dataframe.ipynb
+++ b/proffesional_python/pandas/series_dataframe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,12 +385,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c9374a5d5ab4748b8d60681d891a00ebd42f7a697df929eea3c0773aed233ddc"
+    "hash": "bc332840cb6a146a7226428ab1f115aa116384ac1c71bc7de922a272f1f1c867"
    }
   }
  },
