--- a/math/functions/Book_Funciones_Exponenciales_y_Logaritmicas.ipynb
+++ b/math/functions/Book_Funciones_Exponenciales_y_Logaritmicas.ipynb
@@ -45,20 +45,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "XcHOVjLNXfJo"
-      },
-      "source": [
-        "## Funciones Exponenciales\n",
-        "\n",
-        "La **función exponencial con base a** está definida para todos los números reales x por $$f\\left(x\\right)=a^x$$\n",
-        "donde $a\\:>0\\:y\\:a\\:\\ne 1$\n",
-        "\n",
-        "**Nota**: Se deduce que $\\:a\\:\\ne 1$ ya que la funcion $f\\left(x\\right)=1^x=1$ lo cual es numero constante\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "IyQMX7lsaA8q"
       },
       "source": [
@@ -747,17 +733,17 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+      "version": "3.9.12"
     },
     "vscode": {
       "interpreter": {
-        "hash": "bc332840cb6a146a7226428ab1f115aa116384ac1c71bc7de922a272f1f1c867"
+        "hash": "01b4149db4fb1fa5a29ca66093a495b44bff5902576e37fb5424b06403ef395b"
       }
     }
   },
