--- a/math/functions/trigger_functions.ipynb
+++ b/math/functions/trigger_functions.ipynb
@@ -549,7 +549,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -563,11 +563,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+      "version": "3.9.12"
     },
     "vscode": {
       "interpreter": {
-        "hash": "bc332840cb6a146a7226428ab1f115aa116384ac1c71bc7de922a272f1f1c867"
+        "hash": "01b4149db4fb1fa5a29ca66093a495b44bff5902576e37fb5424b06403ef395b"
       }
     }
   },
